<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mppi_pkg</name>
  <version>0.0.0</version>
  <description>Model Predictive Path Integral Control package (C++ ROS2)</description>

  <maintainer email="jbalasur@uwaterloo.ca">bolty</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>path_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
