<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_controller</name>
  <version>0.0.0</version>
  <description>OSQP-based Model Predictive Controller for trajectory tracking.</description>
  <maintainer email="hello@watonomous.ca">WATonomous</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>osqp_eigen_vendor</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviour_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>wato_trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>wato_lifecycle_manager</depend>

  <exec_depend>rmw_zenoh_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
