<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mppi_control</name>
  <version>0.0.0</version>
  <description>Model Predictive Path Integral Control package (C++ ROS2)</description>

  <maintainer email="j.balasuriya@watonomous.ca">Jaden Balasuriya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
