<?xml version="1.0"?>
<package format="3">
  <name>pure_pursuit_control</name>
  <version>0.0.0</version>
  <description>Pure Pursuit Control Package</description>

  <maintainer email="danielkang747@watonomous.ca">Daniel Kang</maintainer>
  <license>TODO</license>

  <!--https://www.ros.org/reps/rep-0149.html#dependency-tags-->
  <!--ROS 2 and Message Dependencies-->>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>world_modeling_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!--https://www.ros.org/reps/rep-0149.html#export-->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
